Enhance Goshuin search functionality: add `query` parameter for label or temple name filtering, update specifications, services, and OpenAPI specs.